# qwc-map-viewer

./: .cibump  Dockerfile  Dockerfile-qwc2-app  LICENSE  README.md  origin_detector.py  pyproject.toml  qwc2_viewer.py  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: qwc-map-viewer.json
src/: qwc2_viewer.py  server.py
