[project]
name = "qwc-map-viewer"
version = "v2025.09.03"
description = "QWC Map Viewer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "Werkzeug~=3.0.6",
    "Flask-JWT-Extended~=4.6.0",
    "flask-restx~=1.3.0",
    "requests~=2.32.0",
    "psycopg2~=2.9.9",
    "SQLAlchemy~=2.0.29",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
